--- a/Snake/Snake/Snake.csproj
+++ b/Snake/Snake/Snake.csproj
@@ -42,16 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="global.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Score.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="FoodCreator.cs" />
     <Compile Include="HorizontalLine.cs" />
     <Compile Include="Point.cs" />
-    <Compile Include="..\..\..\..\..\Desktop\Program.cs">
-      <Link>Program.cs</Link>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
     <Compile Include="Speed.cs" />
